--- a/public/index.css
+++ b/public/index.css
@@ -33,32 +33,64 @@ body {
 
 .home-container {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  isolation: isolate;
 }
 
-.left {
+.home-container::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-image: url(./assets/background.jpg);
+  background-size: cover;
+  opacity: 0.4;
+  min-height: 100vh;
+}
+
+.nav-tiles {
+  max-width: 55%;
   display: flex;
-  flex-direction: column;
-  width: 20em;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.hide-tiles {
+  display: none;
 }
 
 .cat-nav {
   margin: 1.3em;
+  height: 17rem;
+  width: 17rem;
   color: #708793;
-  font-size: 1.4em;
+  font-size: 1.6em;
   font-weight: 900;
   border: none;
+  border-radius: 10px;
   background-color: white;
   font-family: "Jost", sans-serif;
   cursor: pointer;
+  box-shadow: 0px 3px 15px rgba(100, 100, 100, 0.49);
+}
+@media (max-width: 1275px) {
+  .cat-nav {
+    height: 13rem;
+    width: 13rem;
+  }
 }
 
-.right {
+.gallery {
   width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.gallery-hidden {
+  display: none;
 }
 
 .tile {
@@ -73,6 +105,231 @@ body {
   box-shadow: 0px 3px 15px rgba(100, 100, 100, 0.49);
 }
 
-/* .background {
+.about-container {
+  display: flex;
+  justify-content: center;
+  width: 65%;
+  margin: 3em 0;
+  background-color: white;
+  padding: 2em;
+  border-radius: 1em;
+}
+
+.yellow {
+  display: flex;
+  justify-content: center;
   background-image: url(./assets/background.jpg);
-} */
+  background-size: cover;
+}
+
+.bio {
+  font-family: "Jost", sans-serif;
+  font-size: 1.4em;
+  margin-top: 0;
+}
+
+.db {
+  font-size: 2em;
+}
+
+.headshot {
+  float: right;
+  width: 15em;
+  height: 18em;
+  margin: 0 0 0 2em;
+}
+
+.quote-container {
+  display: flex;
+  justify-content: center;
+  background-image: url(./assets/background.jpg);
+  background-size: cover;
+}
+
+.quote-form {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  width: 40%;
+  margin: 3em 0;
+  border-radius: 1em;
+  box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.2);
+  opacity: 98%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.quote-title {
+  font-family: "Jost", sans-serif;
+  font-size: 2.9em;
+  text-decoration: none;
+  font-weight: 900;
+  color: #708793;
+}
+
+.input-field {
+  border: none;
+  padding: 0.2em;
+  font-size: 1.3em;
+  background-color: aliceblue;
+  margin: 0.7em 0;
+  border-radius: 0.2em;
+  box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.2);
+}
+
+.hide-selection {
+  display: none;
+}
+
+.show-dropdown {
+  display: block;
+}
+
+.text-box {
+  height: 4em;
+}
+
+.submit-button {
+  height: 3em;
+  width: 8em;
+  border-radius: 0.3em;
+  border: none;
+  background-color: #708793;
+  margin-top: 1.1em;
+  margin-bottom: 2em;
+  font-size: 1em;
+  color: white;
+  cursor: pointer;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  background-image: url(./assets/background.jpg);
+  background-size: cover;
+  min-height: 100vh;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60rem;
+  height: 20rem;
+  margin-top: 7em;
+  font-family: "Jost", sans-serif;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.2);
+}
+.get-in-touch {
+  margin-top: 0.4em;
+  text-align: center;
+  font-size: 3.5em;
+  font-family: "Jost", sans-serif;
+  font-weight: 900;
+  color: #708793;
+}
+
+.line {
+  width: 40rem;
+  border: solid black 1px;
+  margin: auto;
+}
+
+.methods {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.top {
+  font-size: 2em;
+}
+
+.bottom {
+  font-size: 1em;
+}
+
+.navlink.active {
+  transition: all 0.3;
+  color: black;
+}
+
+.carousel-styled {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: fit-content;
+
+  .slide {
+    margin-top: 3rem;
+    display: flex;
+    background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 3px;
+    max-height: 40rem;
+    position: relative;
+  }
+
+  .slide-hidden {
+    display: none;
+  }
+
+  .close {
+    position: absolute;
+    right: 3px;
+    top: 3px;
+    border-radius: 50%;
+    background-color: white;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+    border: none;
+    font-size: 1.5rem;
+  }
+
+  .arrow {
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    color: white;
+    cursor: pointer;
+    filter: drop-shadow(0px 0px 5px #555);
+  }
+
+  .leftArrow {
+    left: 1rem;
+    z-index: 1;
+  }
+  .rightArrow {
+    right: 1rem;
+  }
+
+  .indicators {
+    display: flex;
+    position: absolute;
+    bottom: 0.75rem;
+  }
+
+  .indicator {
+    background-color: white;
+    height: 0.5rem;
+    width: 0.5rem;
+    border-radius: 100%;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 5px #555;
+    margin: 0 0.2rem;
+    cursor: pointer;
+  }
+
+  .indicator-current {
+    background-color: gray;
+  }
+}
