--- a/public/index.css
+++ b/public/index.css
@@ -74,6 +74,10 @@ body {
   cursor: pointer;
   box-shadow: 0px 3px 15px rgba(100, 100, 100, 0.49);
 }
+
+.cat-nav:hover {
+  scale: 1.1;
+}
 @media (max-width: 1275px) {
   .cat-nav {
     height: 13rem;
